--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         embed {
             width: 100%;
             height: 100%;
+            margin: 0 auto;;
         }
         .download-btn {
             display: inline-block;
@@ -35,9 +36,10 @@
     </style>
 </head>
 <body>
-    <!-- <h1 display="inline-block">PDF Viewer</h1> -->
-    <!-- <a href="C://Users//sakib.hasan//Documents//Interest-work//xa.pdf" class="download-btn" download>Download PDF</a> -->
+   <div class="embed">
+        <iframe src="/LQBTQ.pdf" width="100%" height="600px" frameborder="0"></iframe>
+   </div>
 
-    <embed src="/LQBTQ.pdf" type="application/pdf" />
+<!--     <embed src="/LQBTQ.pdf" type="application/pdf" /> -->
 </body>
 </html>
