--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>PDF Viewer</title> -->
+<!--     <title>PDF Viewer</title> -->
     <style>
         html{
             height: 95%;
@@ -17,7 +17,7 @@
         embed {
             width: 100%;
             height: 100%;
-            margin: 0 auto;;
+            margin: 0 auto;
         }
         .download-btn {
             display: inline-block;
@@ -36,10 +36,7 @@
     </style>
 </head>
 <body>
-   <div class="embed">
-        <iframe src="/LQBTQ.pdf" width="100%" height="600px" frameborder="0"></iframe>
-   </div>
-
-<!--     <embed src="/LQBTQ.pdf" type="application/pdf" /> -->
+    <h1>About LQBTQ</h1>
+    <embed src="/LQBTQ.pdf" type="application/pdf" />
 </body>
 </html>
